--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "browser-sync": "^2.18.5",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-config-angular": "^0.5.0",
     "eslint-config-standard": "^10.2.0",
+    "eslint-plugin-angular": "^2.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
