--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-socket-io": "^0.7.0",
     "angular-ui-router": "1.0.0-beta.3",
     "body-parser": "~1.16.0",
     "debug": "~2.6.0",
@@ -14,7 +15,8 @@
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
     "pg": "^6.1.2",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "browser-sync": "^2.18.5",
