--- a/package.json
+++ b/package.json
@@ -3,23 +3,33 @@
   "version": "0.0.0",
   "scripts": {
     "postinstall": "sh ./setupdb.sh",
-    "start": "gulp"
+    "start": "gulp",
+    "test": "./node_modules/mocha/bin/_mocha"
   },
   "dependencies": {
     "angular": "^1.6.0",
     "angular-socket-io": "^0.7.0",
     "angular-ui-router": "1.0.0-beta.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.16.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.1",
+    "express-session": "^1.15.2",
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "serve-favicon": "~2.3.2",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "browser-sync": "^2.18.5",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-config-angular": "^0.5.0",
@@ -31,6 +41,8 @@
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
-    "nodemon": "^1.11.0"
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "passport-stub": "^1.1.1"
   }
 }
