--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "serve-favicon": "~2.3.2",
